[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fqfa"
dynamic = ["version"]
description = "A lightweight Python library for handling FASTQ and FASTA files."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.6"
authors = [
    { name = "Alan F Rubin", email = "alan.rubin@wehi.edu.au" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    'dataclasses; python_version < "3.7"',
]

[project.urls]
repository = "https://github.com/CountESS-Project/fqfa"
documentation = "https://fqfa.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pre-commit",
    "pytest",
]

[tool.black]
line-length = 120

[tool.hatch.version]
path = "src/fqfa/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fqfa"]

[tool.hatch.build.targets.sdist]
exclude = [
    "docs/",
    ".readthedocs.yaml",
    ".github/",
    "paper.*",
]
